<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CapstoneFishkuSeller</string>
    <string name="dashboard">Dashboard</string>
    <string name="toko_ikan">Memperoleh data…</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="account_balance">Account Balance</string>
    <string name="rp_balance">Rp {Balance}</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_profile">Ke Activity Profile Activity</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_sport">Ke fragment Sport</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_home">Ke fragment Home</string>
    <string name="today_s_income">Pendapatan hari ini</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="seller_photo">Seller Photo</string>
    <string name="today_s_sales">Penjualan hari ini</string>
    <string name="stock">Inventory</string>
    <string name="transaction">Transaction</string>
    <string name="analytic">Analytic</string>
    <string name="account">Account</string>
    <string name="chat">Chat</string>
    <string name="messaging">Messaging</string>
    <string name="see_transaction">Lihat detail transaksi</string>
    <string name="price_prediction">Prediksi Harga Ikan</string>
    <string name="actual_price">Actual Market Price</string>
    <string name="predict_price">Predicted Price</string>
    <string name="see_price_prediction">Lihat detail prediksi</string>
    <string name="notification_description">Notification Description</string>
    <string name="order_received">Order Received - ID</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login_account">Masuk Akun</string>
    <string name="no_account">Tidak Punya Akun?</string>
    <string name="register_here">Daftar Disini</string>
    <string name="create_your_account">Buat Akun Kamu</string>
    <string name="user_name">Nama Pengguna</string>
    <string name="company_address">Alamat Usaha</string>
    <string name="address">Alamat</string>
    <string name="role">Peran</string>
    <string name="create_account">Buat Akun</string>
    <string name="already_have_account">Sudah Punya Akun? Masuk di sini.</string>
    <string name="login_here">Masuk Disini</string>
    <string name="fishku_partner">Fishku Partner</string>
    <string name="last_message">Pesan Terakhir</string>
    <string name="time">Time</string>
    <string name="zero">0</string>
    <string name="inventory">Inventori</string>
    <string name="input_item_name">Masukkan Nama Barang</string>
    <string name="edit_item">Edit Barang</string>
    <string name="price">Harga</string>
    <string name="title">Title</string>
    <string name="delete_item">Delete item</string>
    <string name="profile">Profil</string>
    <string name="account_name">Nama akun</string>
    <string name="phone">No Hp</string>
    <string name="order">Pesanan</string>
    <string name="shipping_status">Status Pengiriman</string>
    <string name="check_status">Cek Status</string>
    <string name="email_error_message">Invalid email format</string>
    <string name="password_error_message">Minimal 6 karakter</string>
    <string name="name_empty">Tidak boleh kosong</string>
    <string name="register_disclaimer">Dengan melanjutkan, Anda menyetujui Persyaratan Layanan kami dan Kebijakan Privasi.</string>
    <string name="phone_number">Nomer Telepon</string>
    <string name="phone_error_message">Nomer tidak valid</string>
    <string name="seller_app">SELLER APP</string>
    <string name="fishku">FI$HKU</string>
    <string name="no_account_yet">Belum punya akun? Daftar di sini.</string>
    <string name="logout">Logout</string>
    <string name="email_invalid" />
    <string name="invalid_email">Email tidak valid.</string>
    <string name="btn_ok">oke</string>
    <string name="invalid_input">Input tidak valid</string>
    <string name="register_success">Daftar Berhasil</string>
    <string name="register_success_desc">Akun mu telah berhasil didaftarkan. Silahkan melakukan login.</string>
    <string name="regis_cancel">Batal Daftar</string>
    <string name="regis_cancel_desc">Apakah anda yakin ingin kembali? Input yang anda masukkan akan hilang.</string>
    <string name="btn_yes">Ya</string>
    <string name="btn_no">Tidak</string>
    <string name="exit_app">Keluar Fishku</string>
    <string name="exit_validation">Anda akan keluar dari aplikasi. Lanjutkan?</string>
    <string name="next_price">Prediksi harga bulan depan</string>
    <string name="exp_fish_price">Rp 23.000,-/kg</string>
    <string name="exp_fish_price2">Rp 25.000,-/kg</string>
    <string name="income_exp">Rp 132.000,-</string>
    <string name="sales_exp">6</string>
    <string name="grosir">Grosir</string>
    <string name="eceran">Eceran</string>
    <string name="harga_ikan">Harga Ikan</string>
    <string name="jenis_ikan">Pilih Jenis Ikan</string>
    <string name="kesegaran_ikan">KESEGARAN IKAN</string>
    <string name="segar">Ikan Segar</string>
    <string name="tidak_segar">Ikan Tidak Segar</string>
    <string name="pengemasan_ikan">CARA PENGEMASAN IKAN</string>
    <string name="pengemasan_ikansegar">1. Siapkan hal yang dibutuhkan: kotak pengiriman berinsulasi, styrofoam pendingin, gel packs (kemasan gel), kantong plastik tebal, bubble wrap (bungkus gelembung) atau koran, dan isolasi perekat.</string>
    <string name="pengemasan_ikansegar2">2. Siapkan ikan dan bungkus ikan dengan plastik tebal, buang udara berlebih, ikat plastik dan pastikan bahwa plastik tertutup dengan baik untuk mencegah kebocoran. Anda juga bisa menggunakan double plastik.</string>
    <string name="pengemasan_ikansegar3">3. Lapisi bagian bawah styrofoam dengan gel packs, tempatkan ikan yang sudah dibungkus, kemudian tambahkan lebih banyak gel packs.</string>
    <string name="pengemasan_ikansegar4">4. Pastikan styrofoam terisi penuh dan tidak terdapat ruang hampa agar tahan dari guncangan, kamu bisa menggunakan tambahan bubble wrap/kertas koran untuk mengisi ruangan hampa.</string>
    <string name="pengemasan_ikansegar5">5. Tutup dan rekatkan styrofoam.</string>
    <string name="pengemasan_ikansegar6">6. Masukkan styrofoam ke dalam kotak/dus, setelah itu rekatkan kotak/dus.</string>
    <string name="pengemasan_ikansegar7">7. Beri label pada paket. Pastikan kamu melaporkan paket sebagai ikan segar/frozen ke layanan pengiriman.</string>
    <string name="pengemasan_ikansegar8">8. Pilih layanan pengiriman yang sesuai. Pilihlah pengiriman dengan penanganan khusus dan tercepat.</string>
    <string name="pengemasan_ikanhidup1">1. Siapkan hal yang dibutuhkan: kotak pengiriman berinsulasi, styrofoam pendingin, gel packs (kemasan gel), kantong plastik tebal, bubble wrap (bungkus gelembung) atau koran, dan isolasi perekat.</string>
    <string name="pengemasan_ikanhidup2">2. Isi plastik dengan air bersih tanpa klorin pada suhu dan pH yang tepat. Sebaiknya gunakan double plastik untuk mencegah kebocoran.</string>
    <string name="pengemasan_ikanhidup3">3. Tangkap ikan hidup dan masukkan ke dalam kantong plastik dengan sepertiga air.</string>
    <string name="pengemasan_ikanhidup4">4. Tambahkan oksigen atau udara segar dan ikat dengan kencang.</string>
    <string name="pengemasan_ikanhidup5">5. Masukkan plastik ke dalam styrofoam dan isi ruang kosong dengan bubble wrap/ kertas koran.</string>
    <string name="pengemasan_ikanhidup6">6. Tutup dan rekatkan styrofoam, kemudian masukkan ke dalam dus.</string>
    <string name="pengemasan_ikanhidup7">7. Rekatkan dus dan beri label sebagai "Ikan Hidup - Fragile."</string>
    <string name="pengemasan_ikanhidup8">8. Pilih layanan pengiriman yang sesuai. Pilihlah pengiriman dengan penanganan khusus dan tercepat.</string>
    <string name="history_message">Pesanan telah diterima oleh yang bersangkutan</string>
    <string name="add_item">Tambah Barang</string>
    <string name="tips" tools:ignore="Typos">Foto berkualitas tinggi biasanya jadi lebih populer. Jenis foto yang diterima JPG, PNG.</string>
    <string name="edit_photo">Ubah Foto</string>
    <string name="item_name">Nama Ikan</string>
    <string name="item_price">Harga Ikan (Rp)</string>
    <string name="item_weight">Berat Ikan (kg)</string>
    <string name="item_desc">Catatan</string>
    <string name="save_change">Simpan</string>
    <string name="add">Tambah</string>
    <string name="change_data">Ubah</string>
    <string name="input_empty">Semua data harus diisi.</string>
    <string name="customer_support">Bantuan Pengguna</string>
    <string name="log_out">Keluar dari akun</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="freshness_detector">Freshness Detector</string>
    <string name="hello_world">Hello World</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="camera_failed">Gagal memulai kamera</string>
    <string name="capture_success">Foto berhasil.</string>
    <string name="capture_failed">Foto gagal.</string>
    <string name="memperoleh_hasil">Memperoleh hasil…</string>
    <string name="cancel_and_retake">Ambil Ulang</string>
    <string name="get_result">Cek Hasil</string>
    <string name="exit">Keluar</string>
    <string name="no_permit">Tidak mendapat izin</string>
    <string name="discard_image">Buang Foto</string>
    <string name="discard_desc">Kembali ke kamera? Foto yang sekarang akan dibuang.</string>
    <string name="detect_result">Hasil Deteksi</string>
    <string name="back_to_menu">Keluar</string>
    <string name="back_to_menu_desc">Apakah anda yakin ingin kembali ke menu?</string>
    <string name="batalkan">Batalkan</string>
    <string name="chat_feature">Obrolan</string>
    <string name="transaksi">Transaksi</string>
    <string name="informasi">Informasi &amp; Ketentuan</string>
    <string name="panduan_kesegaran">Panduan kesegaran ikan</string>
    <string name="panduan_pengemasan_ikan">Panduan pengemasan ikan</string>
    <string name="extras">Extras</string>
    <string name="bulan">Bulan</string>
    <string name="harga_bulan_ini">Harga Bulan Ini</string>
    <string name="rp_20_000_kg">Rp 20.000,-/kg</string>
    <string name="rp_23_000_kg">Rp 23.000,-/kg</string>
    <string name="prediksi_harga_ikan">Prediksi Harga Ikan</string>
    <string name="_3">3</string>
    <string name="rp_202_000">Rp. 202.000,-</string>

    <string-array name="spinner_items">
        <item>Pilih Peran</item>
        <item>Nelayan</item>
        <item>Pembudidaya</item>
        <item>Distributor</item>
    </string-array>

    <string-array name="filter_harga_ikan">
        <item>Gurame</item>
        <item>Bandeng</item>
        <item>Nila</item>
        <item>Lele</item>
        <item>Tongkol</item>
    </string-array>


</resources>