<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_stock"
        android:title="@string/stock" />


    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transaction"
        android:title="@string/transaction" />

    <item
        android:id="@+id/navigation_messaging"
        android:icon="@drawable/ic_messaging"
        android:title="@string/messaging" />


    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/account" />
</menu>