<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.HomeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/fishku_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_notification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/notification_icon"
        android:src="@drawable/notification_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="5dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_seller_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/seller_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_seller_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/toko_ikan"
                android:textSize="16sp"
                android:textColor="@color/fishku_blue"
                app:layout_constraintBottom_toBottomOf="@+id/iv_seller_avatar"
                app:layout_constraintStart_toEndOf="@+id/iv_seller_avatar"
                app:layout_constraintTop_toTopOf="@+id/iv_seller_avatar" />

            <TextView
                android:id="@+id/lb_todays_income"
                style="@style/FishkuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/today_s_income"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_seller_avatar" />

            <TextView
                android:id="@+id/tv_todays_income"
                style="@style/FishkuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/income_exp"
                android:textColor="@color/profit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_seller_avatar" />

            <TextView
                android:id="@+id/lb_todays_sales"
                style="@style/FishkuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/today_s_sales"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lb_todays_income" />

            <TextView
                android:id="@+id/tv_todays_sales"
                style="@style/FishkuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sales_exp"
                android:textColor="@color/fishku_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lb_todays_income" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/lb_todays_sales"
                tools:layout_editor_absoluteX="16dp" />

            <LinearLayout
                android:id="@+id/btn_transaction_detail"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_dashboard"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FishkuText"
                    android:textColor="@color/fishku_blue"
                    android:text="@string/see_transaction" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAnalytic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewIncome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/lb_price_prediction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/price_prediction"
                android:textAlignment="center"
                android:textColor="@color/fishku_blue"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spn_filter_harga"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:spinnerMode="dropdown"
                android:contentDescription="@string/app_name"
                android:background="@drawable/spinner_background"
                android:minHeight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:popupTheme="@style/SpinnerPopupTheme"/>

            <ImageView
                android:id="@+id/iv_price_fish_image"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ikan_bandeng"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lb_price_prediction"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="198dp" />

            <TextView
                android:id="@+id/lb_next_price"
                style="@style/FishkuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/next_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_price_fish_image"
                app:layout_constraintTop_toTopOf="@+id/iv_price_fish_image" />

            <TextView
                android:id="@+id/lb_grosir"
                style="@style/FishkuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/grosir"
                app:layout_constraintStart_toStartOf="@+id/lb_next_price"
                app:layout_constraintTop_toBottomOf="@+id/lb_next_price" />


            <TextView
                android:id="@+id/lb_eceran"
                style="@style/FishkuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grosir"
                app:layout_constraintStart_toStartOf="@+id/lb_next_price"
                app:layout_constraintTop_toBottomOf="@+id/lb_grosir" />

            <TextView
                android:id="@+id/tv_next_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/exp_fish_price"
                android:textColor="@color/fishku_blue"
                app:layout_constraintStart_toEndOf="@+id/lb_grosir"
                app:layout_constraintTop_toBottomOf="@+id/lb_next_price" />

            <TextView
                android:id="@+id/tv_next_price2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/exp_fish_price2"
                android:textColor="@color/fishku_blue"
                app:layout_constraintStart_toEndOf="@+id/lb_grosir"
                app:layout_constraintTop_toBottomOf="@+id/lb_grosir" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_dashboard2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/lb_eceran" />

            <LinearLayout
                android:id="@+id/btn_prediction_detail"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/divider_dashboard2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_price_prediction"
                    android:textColor="@color/fishku_blue"
                    tools:layout_editor_absoluteX="126dp"
                    tools:layout_editor_absoluteY="418dp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>